--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,7 +5,7 @@ body {
 /********************************************************************************************** MAIN PAGE ***********************************************************************/ 
 
 #container {
-	width: 200px;
+	width: 210px;
 	height: 156px;
 	text-align: center;
 	margin-top: 20px;
@@ -21,10 +21,16 @@ body {
 
 /* HOME PAGE */
 .days {
-	margin-left: 15px;
+	width: 60px;
+	height: 40px;
+	border-radius: 5px;
+	font-size: 28px;
+	margin-left: 0px;
+	font-weight: bold;
+	text-align: center;
 }
 
-.days, .hours, .min, .sec {
+.hours, .min, .sec {
 	width: 40px;
 	height: 40px;
 	border-radius: 5px;
@@ -61,6 +67,24 @@ body {
 #txt_days, .txt_hours, .txt_min, .txt_sec {
 }
 
+#all-cache {
+	float: left;
+    margin-top: 20px;
+    margin-left: 25%;
+}
+#all-cache-p {
+	float: left;
+}
+#all-time {
+	float: left;
+    margin-left: 25%;
+    margin-top: -13px;
+}
+#all-time-p {
+	float: left;
+	margin-top: -17px;
+}
+
 #submit {
 	background-color:#da534f;
 	-moz-border-radius:3px;
@@ -74,6 +98,7 @@ body {
 	padding:6px 24px;
 	text-decoration:none;
 	border: none;
+	margin-left: 16px;
 }
 #submit:hover {
 	background-color:#eb5b57;
@@ -88,7 +113,7 @@ body {
 #container_options {
 	width: 400px;
 	height: 250px;
-	margin-top: 20px;
+	margin-top: 90px;
 }
 
 #options img {
