--- a/views/popup.html
+++ b/views/popup.html
@@ -3,17 +3,17 @@
 		<meta charset="utf-8">
 		<title>Cache Cleaner</title>
 		<!--	 CSS -->
-		<link rel="stylesheet" href="static/css/style.css">
-		<script src="static/js/jquery.min.js"></script>
-        <script src="popup.js"></script>
-		<script src="options.js"></script>
-		<script src="static/js/our.js"></script>
+		<link rel="stylesheet" href="../static/css/style.css">
+		<script src="../static/js/jquery.min.js"></script>
+        <script src="../controllers/popup.js"></script>
+		<script src="../controllers/options.js"></script>
+		<script src="../static/js/our.js"></script>
 	</head>		
 	<body>
         <div id="container">
             <div id="options"> 
                  <a href="#" >
-                    <img src="static/img/options.jpg" id="gearing-options">
+                    <img src="../static/img/options.jpg" id="gearing-options">
                 </a>
             </div>
             <div class="submit_box">
@@ -79,12 +79,12 @@
                 <p id="title_name">Smart Cache Cleaner</p>
             </div>
             <div class="flags">
-                <img id="fr" src="static/img/flags/fr.jpg" />
-                <img id="en" src="static/img/flags/en.jpg" />
-                <img id="chi" src="static/img/flags/chi.jpg" />
-                <img id="por" src="static/img/flags/por.jpg" />
-                <img id="ger" src="static/img/flags/all.jpg" />
-                <img id="spa" src="static/img/flags/esp.jpg" />
+                <img id="fr" src="../static/img/flags/fr.jpg" />
+                <img id="en" src="../static/img/flags/en.jpg" />
+                <img id="chi" src="../static/img/flags/chi.jpg" />
+                <img id="por" src="../static/img/flags/por.jpg" />
+                <img id="ger" src="../static/img/flags/all.jpg" />
+                <img id="spa" src="../static/img/flags/esp.jpg" />
             </div>
             <div class="checkbox">
                 <div id="checkbox_left">
