#1 : Chinese translation updated

--- a/views/popup.html
+++ b/views/popup.html
@@ -72,7 +72,7 @@
         <div id="container_options">
             <div id="options">
                 <a href="#" >
-                    <img src="static/img/options.jpg" id="gearing-home">
+                    <img src="../static/img/options.jpg" id="gearing-home">
                 </a>
             </div>
             <div class="submit_box">
