Adding saving button

--- a/views/popup.html
+++ b/views/popup.html
@@ -138,6 +138,9 @@
                     </label>
                 </div>
             </div>
+            <div class="submit_box">
+                <button  id="save" type="button"><span id="txt_save">Sauvegarder</span></button>
+            </div>
         </div>
 	</body>
 </html>
