--- a/views/popup.html
+++ b/views/popup.html
@@ -15,13 +15,13 @@
             <div id="options"> 
                  <a id="gearing-options" href="#" >
                     <span class="icon-cog"></span>
-                    <span class="txt_options">Options</span>
+                    <span id="txt_options">Options</span>
                 </a>
             </div>
             <div id="help"> 
                  <a id="help-options" href="#" >
                     <span class="icon-help"></span>
-                    <span class="txt_help">Aide</span>
+                    <span id="txt_help">Aide</span>
                 </a>
             </div>
             <div class="submit_box">
