Fix Height on Title & options/help btn

--- a/views/popup.html
+++ b/views/popup.html
@@ -12,17 +12,19 @@
 	</head>		
 	<body>
         <div id="container">
-            <div id="options"> 
-                 <a id="gearing-options" href="#" >
-                    <span class="icon-cog"></span>
-                    <span id="txt_options">Options</span>
-                </a>
-            </div>
-            <div id="help"> 
-                 <a id="help-options" href="#" >
-                    <span class="icon-help"></span>
-                    <span id="txt_help">Aide</span>
-                </a>
+            <div class="submit_box">
+                <div id="options"> 
+                     <a id="gearing-options" href="#" >
+                        <span class="icon-cog"></span>
+                        <span class="txt_options">Options</span>
+                    </a>
+                </div>
+                <div id="help"> 
+                     <a id="help-options" href="#" >
+                        <span class="icon-help"></span>
+                        <span class="txt_help">Aide</span>
+                    </a>
+                </div>
             </div>
             <div class="submit_box">
                 <p id="title_name">Smart Cache Cleaner</p>
