better translation handler

--- a/views/popup.html
+++ b/views/popup.html
@@ -110,6 +110,9 @@
                 <div class="flag-box">
                     <img id="spa" src="../static/img/flags/esp.jpg" />
                 </div>
+                <div class="flag-box">
+                    <img id="ara" src="../static/img/flags/ara.jpg" />
+                </div>
             </div>
             <div class="checkbox">
                 <div id="checkbox_left">
