fix arabic character position

--- a/views/popup.html
+++ b/views/popup.html
@@ -22,7 +22,7 @@
                 <div id="help"> 
                      <a id="help-options" href="#" >
                         <span class="icon-help"></span>
-                        <span class="txt_help">Aide</span>
+                        <span id="txt_help">Aide</span>
                     </a>
                 </div>
             </div>
