--- a/views/popup.html
+++ b/views/popup.html
@@ -59,18 +59,20 @@
                         </p>
                     </div>
                 </div>
-                <div class="checkboxs_cache">
-                    <div>
-                         <label>
-                            <input id="all-cache" type="checkbox" name="all-cache" value="all-cache"> <span id="txt_all-cache">Tous types de caches</span>
-                        </label>
+                <div id="checkbox-cache-time">
+                    <div class="checkboxs_cache">
+                        <div>
+                             <label>
+                                <input id="all-cache" type="checkbox" name="all-cache" value="all-cache"> <span id="txt_all-cache">Tous types de caches</span>
+                            </label>
+                        </div>
                     </div>
-                </div>
-                <div class="checkboxs_time">
-                    <div>
-                         <label>
-                            <input id="all-time" type="checkbox" name="all-time" value="all-time"> <span id="txt_all-time">Sans durée de temps</span>
-                        </label>
+                    <div class="checkboxs_time">
+                        <div>
+                             <label>
+                                <input id="all-time" type="checkbox" name="all-time" value="all-time"> <span id="txt_all-time">Sans durée de temps</span>
+                            </label>
+                        </div>
                     </div>
                 </div>
                 <div class="submit_box">
